<resources>
    <string name="app_name">GameShareApp</string>
    <string name="username">Username</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Create account</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="zipcode">Zipcode</string>
    <string name="error_invalid_zipcode">Invalid Zipcode</string>
    <string name="error_username_not_found">Invalid Username or Password</string>
    <string name="success">Successfully logged in as</string>
    <string name="webservice_baseurl">"https://gamemateservice.azurewebsites.net/"</string>
    <string name="register_success">Thank You! Please check your email to activate your account</string>
    <string name="title_activity_view_games">ViewGamesActivity</string>
    <string name="game_title">Game Title</string>
    <string name="game_system">System</string>
    <string name="sell">Sell</string>
    <string name="share">Share</string>
    <string name="trade">Trade</string>
    <string name="date">Date added</string>
    <string name="my_games">My Games</string>
    <string name="delete_confirmation">Are you sure you want to delete this game?</string>
    <string name="delete_confirmation2">Are you sure you want to delete all your games?</string>
    <string name="delete_confirmation3">Are you sure you want to delete all your messages?</string>
    <string name="delete_title">\?!?</string>
    <string name="confirm_delete">Kill it!</string>
    <string name="confirm_delete2">Kill them!</string>
    <string name="no">No!</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="add_game">Add Game</string>
    <string name="update_game">Update Game</string>
    <string name="delete_all_games">Delete all games</string>
    <string name="flag_not_chosen">At least one flag must be chosen</string>

    <string-array name="game_platforms_array">
        <item>Linux</item>
        <item>Mac</item>
        <item>Microsoft Windows</item>
        <item>PlayStation 3</item>
        <item>PlayStation 4</item>
        <item>Wii U</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
    </string-array>

    <string-array name="options">
        <item>View Profile</item>
        <item>Send Message</item>
    </string-array>
    <string-array name="drawer_array">
        <item>Profile</item>
        <item>Sign in/Register</item>
    </string-array>
    <string-array name="drawer_array2">
        <item>Profile</item>
        <item>Sign out</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="view_games">My Games</string>
    <string name="change_settings">Change Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="ok">OK</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_added">" has been successfully added!"</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="change_email_location">Change Email/Location</string>
    <string name="my_settings">My Settings</string>
    <string name="title_activity_search_games">SearchGamesActivity</string>
    <string name="search">Search Games</string>
    <string name="game_example">Halo 2</string>
    <string name="searching">"Searching for "</string>
    <string name="please_wait">Please wait...</string>
    <string name="game_mate">GameMate</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="logged_out_confirmation">Successfully logged out</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="message">Message</string>
    <string name="delete_all_messages">Delete all messages</string>
    <string name="my_inbox">My Inbox</string>
    <string name="reply">Reply</string>
</resources>
