<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/register_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/username_register_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/username_register" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/username"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/email_register" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/email"
                android:imeOptions="actionUnspecified" android:inputType="textEmailAddress"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/location_register" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/zipcode"
                android:imeOptions="actionUnspecified" android:inputType="textPostalAddress"
                android:maxLines="1" android:singleLine="true" />

            <EditText android:id="@+id/password_register" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
            <EditText android:id="@+id/password_register2" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/holo_red_light"
                android:text=""
                android:id="@+id/txt_register_error"/>
            <!--Sign in button-->
            <Button android:id="@+id/user_register_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/register"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
